# todolist

./: .env.error  .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1bc789981a09_limit_name_and_description_lengths.py  597cb975a847_create_project_and_task_tables.py
core/: constants.py  exceptions.py  managers.py  repository.py  utils.py
models/: project.py  task.py
src/todolist/: main.py  web_app.py
src/todolist/api/: dependencies.py  routers.py
src/todolist/api/controller_schemas/requests/: project_request_schema.py  task_request_schema.py
src/todolist/api/controller_schemas/responses/: project_response_schema.py  task_response_schema.py
src/todolist/api/controllers/: health_controller.py  projects_controller.py  tasks_controller.py
src/todolist/cli/: console.py
src/todolist/commands/: autoclose_overdue.py  autoclose_scheduler.py
src/todolist/core/: __init__.py  constants.py  managers.py  repository.py  settings.py  utils.py
src/todolist/db/: models.py  session.py
src/todolist/exceptions/: __init__.py
src/todolist/models/: project.py  task.py
src/todolist/repositories/: base.py  inmemory.py  project_db.py  task_db.py
src/todolist/services/: project_service.py  task_service.py
