[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "Built with ❤️ and code."
authors = ["lordsedler1@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
alembic = "^1.17.2"
schedule = "^1.2.2"

[tool.poetry.scripts]
todolist = "todolist.main:main"